# Jivox-opinion-agent

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: PROJECT_INTERVIEW_GUIDE.zh-CN.md
docs/iteration-plans/: 2026-06-08-semantic-support-database-tikhub.zh-CN.md
docs/verification/: 2026-06-07-real-provider-smoke.md
examples/: briefing_plan.example.json  conversation_policy.example.json  conversation_turns.example.json  report_claims.example.json  research_request.example.json  sample_evidence.jsonl  sample_research_report.md
opinion_agent/: __init__.py  cli.py  config.py  models.py  settings.py
opinion_agent/agents/: __init__.py  models.py  registry.py  skills.py
opinion_agent/briefing/: __init__.py  generator.py
opinion_agent/citations/: __init__.py  evaluators.py  models.py  verifier.py
opinion_agent/collectors/: sample.py
opinion_agent/conversation/: __init__.py  policy.py  session.py
opinion_agent/evidence/: normalizer.py  store.py
opinion_agent/graph/: __init__.py  research.py  runtime.py  state.py
opinion_agent/llm/: __init__.py  openai_compatible.py  protocols.py
tests/: __init__.py  fakes.py  test_agent_registry.py  test_briefing.py  test_citation_verifier.py  test_claim_support.py  test_cli.py  test_config.py  test_conversation_policy.py  test_conversation_session.py  test_evidence_normalizer.py  test_evidence_store.py  test_graph_runtime.py  test_llm_adapter.py  test_report.py  test_research_graph.py  test_research_service.py  test_run_trace.py  test_settings.py  test_tool_registry.py
(+19 files in other folders)
