[project]
name = "opinion-agent"
version = "0.1.0"
description = "LangGraph evidence-constrained public-opinion research agent."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "langchain-openai>=0.3,<2",
    "langgraph>=0.6,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
opinion-agent = "opinion_agent.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
